--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,13 @@ line-length = 100
 
 [tool.isort]
 profile = "black"
+line_length = 100
+
+[tool.mypy]
+files = ["chem_translate", "tests"]
+ignore_missing_imports = true
+
+[tool.pytest]
+testpaths = ["tests"]
+addopts = "--doctest-modules"
+doctest_optionflags = "NORMALIZE_WHITESPACE"
