--- a/setup.cfg
+++ b/setup.cfg
@@ -17,32 +17,16 @@ classifiers =
     Programming Language :: Python :: 3.10
     Topic :: Software Development :: Libraries :: Python Modules
 
-
 [options]
-packages = find:
+packages = chem_translate
 python_requires = >= 3.10
-
-[options.packages.find]
-where = .
 
 [options.entry_points]
 console_scripts =
-
-[mypy]
-files = chem_translate
+    chem_translate = chem_translate.scripts.chem_translate:main
 
 [flake8]
 ignore = E203, E266, E501, W503, E731
 max-line-length = 100
 max-complexity = 18
 select = B, C, E, F, W, T4
-
-[pylint]
-max-line-length = 100
-
-[pylint:messages_control]
-disable = C0330, C0326
-
-[tool:pytest]
-addopts = --doctest-modules
-doctest_optionflags = NORMALIZE_WHITESPACE
